<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_UPSData" Id="{5d7332b4-c6cd-4f6a-8273-c2ff5387bbac}">
    <Declaration><![CDATA[TYPE ST_UPSData :
STRUCT
	udi_StatusFunctions 		: 	UDINT;
	udi_StatusInterface 		: 	UDINT;
	ui_InputVoltage				:	UINT;
	ui_InputCurrent				:	UINT;
	ui_OutputVoltage			:	UINT;
	ui_OutputCurrent			:	UINT;
	ui_BatteryVoltage			: 	UINT;
	ui_BatteryChargingCurrent 	: 	UINT;
	ui_BatteryTemperature 		: 	UINT;
	ui_DeviceTemperature		: 	UINT;
	udi_SOC 					:	UDINT;
	ui_TuPCShutdown				:	UINT;
	ui_SOH						:	UINT;
	ui_PHStatus					:	UINT;
	ui_DEVOPTIME				:	UINT;
	ui_DEVUSEROPTIME			:	UINT;
	ui_DEVSTARTS				:	UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>